--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "html2pdf.js": "^0.9.0",
     "inngest": "^3.44.1",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "prisma": "^6.17.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.65.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.3.0",
